[gd_scene load_steps=30 format=3 uid="uid://c0lu2mi230i77"]

[ext_resource type="Script" uid="uid://dbuojxjxvel4s" path="res://barkley2/scenes/Objects/_interactiveActor/_tirnanog/_filler/o_hildeberga01.gd" id="1_0eg3w"]
[ext_resource type="Texture2D" uid="uid://cget40cbh3so4" path="res://barkley2/assets/b2_original/images/merged/s_hildeberga01.png" id="2_0qik5"]
[ext_resource type="Script" uid="uid://brqjwvhoi8eux" path="res://barkley2/resources/B2_Cinema/B2_Script_Legacy.gd" id="2_4pjdt"]
[ext_resource type="Texture2D" uid="uid://cb571hypewlww" path="res://barkley2/assets/b2_original/images/merged/s_hildeberga02.png" id="3_r7u7h"]

[sub_resource type="Resource" id="Resource_xpdis"]
script = ExtResource("2_4pjdt")
original_script = "IF body == governor | GOTO | GOVNA
IF curfew == during | GOTO | ZZZ
IF govCar == 3 | GOTO | GARAGE3
IF govCar == 2 | GOTO | GARAGE2
IF body == governor | GOTO | GOVNAH
IF govCar == 1 | GOTO | GARAGE0
IF govCar == 0 | GOTO | GARAGE0
    
GOVNA
DIALOG | Hildeburge | So you're the governor, huh? I figured you'd be taller.

ZZZ
DIALOG | Hildeburge | `w1`Zzz...`w0` cars... `w1`zzz...`w0`

GARAGE3
DIALOG | Hildeburge | We're gonna supercharge the engine, put in a new ignition system, put on some low profile tires, maybe even install a nitrous injector. And don't even forget the loudest stereo system this side of a Jamaican dancehall. Yeah, no question, we're gonna have the sweetest ride on the Necron 7.

GARAGE2
DIALOG | Hildeburge | Hahaha, can you believe it? The new governor said we're getting a brand new garage with all the tools we need to soup this bad boy up. Doesn't he realize we're just gonna break out the front gate with it?
QUEST  | govCar = 3

GOVNAH
DIALOG | Hildeburge | I just want to cruise... don't care about Cuchulainn, don't care about Tir na Nog... I just wanna feel the wind in my hair...
QUEST  | govCar = 1

GARAGE0
DIALOG | Hildeburge | Amy and I have big plans for this bad boy. I'd like to see the Duergars try to keep us in Tir na Nog while we're pushing this baby as hard as it goes. Look at that speedometer. It goes all the way to 200! I just don't know whether it's in miles or kilometers...
QUEST  | govCar = 1"
metadata/_custom_type_script = "uid://brqjwvhoi8eux"

[sub_resource type="AtlasTexture" id="AtlasTexture_vn2np"]
atlas = ExtResource("2_0qik5")
region = Rect2(0, 0, 32, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxaci"]
atlas = ExtResource("2_0qik5")
region = Rect2(32, 0, 32, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytbsr"]
atlas = ExtResource("2_0qik5")
region = Rect2(64, 0, 32, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tart"]
atlas = ExtResource("2_0qik5")
region = Rect2(96, 0, 32, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xm5x"]
atlas = ExtResource("2_0qik5")
region = Rect2(128, 0, 32, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeiqh"]
atlas = ExtResource("2_0qik5")
region = Rect2(160, 0, 32, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5gci"]
atlas = ExtResource("3_r7u7h")
region = Rect2(0, 0, 67, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaufr"]
atlas = ExtResource("3_r7u7h")
region = Rect2(67, 0, 67, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk67v"]
atlas = ExtResource("3_r7u7h")
region = Rect2(134, 0, 67, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnc3h"]
atlas = ExtResource("3_r7u7h")
region = Rect2(201, 0, 67, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvvm6"]
atlas = ExtResource("3_r7u7h")
region = Rect2(268, 0, 67, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc4j2"]
atlas = ExtResource("3_r7u7h")
region = Rect2(335, 0, 67, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b8up"]
atlas = ExtResource("3_r7u7h")
region = Rect2(402, 0, 67, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilyho"]
atlas = ExtResource("3_r7u7h")
region = Rect2(469, 0, 67, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_t828w"]
atlas = ExtResource("3_r7u7h")
region = Rect2(536, 0, 67, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1o2s"]
atlas = ExtResource("3_r7u7h")
region = Rect2(603, 0, 67, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qmn2"]
atlas = ExtResource("3_r7u7h")
region = Rect2(670, 0, 67, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkce5"]
atlas = ExtResource("3_r7u7h")
region = Rect2(737, 0, 67, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydgy4"]
atlas = ExtResource("3_r7u7h")
region = Rect2(804, 0, 67, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_04gcc"]
atlas = ExtResource("3_r7u7h")
region = Rect2(871, 0, 67, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_he0vx"]
atlas = ExtResource("3_r7u7h")
region = Rect2(938, 0, 67, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_ixqaj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn2np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxaci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytbsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tart")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xm5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeiqh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5gci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaufr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk67v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnc3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvvm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cc4j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5b8up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilyho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t828w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1o2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qmn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkce5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydgy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04gcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he0vx")
}],
"loop": true,
"name": &"hildeSleeping",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_75ys8"]
radius = 9.86761

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0xsv"]
size = Vector2(20, 36)

[node name="o_hildeberga01" type="CharacterBody2D" node_paths=PackedStringArray("mouse_detection_area", "ActorAnim", "ActorCol")]
script = ExtResource("1_0eg3w")
mouse_detection_area = NodePath("ActorInteract")
cutscene_script = SubResource("Resource_xpdis")
ActorAnim = NodePath("ActorAnim")
ActorCol = NodePath("ActorCol")

[node name="ActorAnim" type="AnimatedSprite2D" parent="."]
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_ixqaj")
centered = false
offset = Vector2(-13, -29)
metadata/default = {
"bbox_bottom": "42",
"bbox_left": "0",
"bbox_right": "31",
"bbox_top": "8",
"frames": ["images\\s_hildeberga01_0.png", "images\\s_hildeberga01_1.png", "images\\s_hildeberga01_2.png", "images\\s_hildeberga01_3.png", "images\\s_hildeberga01_4.png", "images\\s_hildeberga01_5.png"],
"height": "44",
"name": "s_hildeberga01",
"width": "32",
"xorig": "13",
"yorigin": "29"
}
metadata/hildeSleeping = {
"bbox_bottom": "37",
"bbox_left": "3",
"bbox_right": "56",
"bbox_top": "13",
"frames": ["images\\s_hildeberga02_0.png", "images\\s_hildeberga02_1.png", "images\\s_hildeberga02_2.png", "images\\s_hildeberga02_3.png", "images\\s_hildeberga02_4.png", "images\\s_hildeberga02_5.png", "images\\s_hildeberga02_6.png", "images\\s_hildeberga02_7.png", "images\\s_hildeberga02_8.png", "images\\s_hildeberga02_9.png", "images\\s_hildeberga02_10.png", "images\\s_hildeberga02_11.png", "images\\s_hildeberga02_12.png", "images\\s_hildeberga02_13.png", "images\\s_hildeberga02_14.png", "images\\s_hildeberga02_15.png"],
"height": "56",
"name": "s_hildeberga02",
"width": "67",
"xorig": "29",
"yorigin": "25"
}

[node name="ActorCol" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_75ys8")

[node name="ActorInteract" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActorInteract"]
shape = SubResource("RectangleShape2D_r0xsv")

[node name="ActorNav" type="NavigationAgent2D" parent="."]

[node name="sound_emiter" type="AudioStreamPlayer2D" parent="."]
max_distance = 350.0
bus = &"Audio"

[connection signal="frame_changed" from="ActorAnim" to="." method="_on_actor_anim_frame_changed"]
